--- a/Data Access · Lucía/Restaurant_Project/Part3/project/pom.xml
+++ b/Data Access · Lucía/Restaurant_Project/Part3/project/pom.xml
@@ -100,6 +100,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
