--- a/PSP · Óscar/api/untitled/pom.xml
+++ b/PSP · Óscar/api/untitled/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>converter-moshi</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+        </dependency>
 
     </dependencies>
 
