--- a/Data_Access_Lucia/Restaurant_Project/Part4/project/pom.xml
+++ b/Data_Access_Lucia/Restaurant_Project/Part4/project/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>NewspaperFX</artifactId>
+    <artifactId>Parte4JDBC</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
