--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/AndroidManifest.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/AndroidManifest.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NachoRestaurante"
-        tools:targetApi="31" />
+        tools:targetApi="31"
 
+        android:name="com.example.nachorestaurante.framework.NachoApp"
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher_background"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        >
+
+        <activity
+            android:name=".framework.pantallamain.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".framework.pantallamdetallada.DetailedActivity"
+            android:exported="true">
+        </activity>
+
+    </application>
 </manifest>
