--- a/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/AndroidManifest.xml
+++ b/Moviles_Oscar/misapps/NachoRestaurante/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
 
         android:name="com.example.nachorestaurante.framework.NachoApp"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher_background"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/logofinal"
+        android:roundIcon="@drawable/logofinal"
         >
 
         <activity
@@ -28,7 +28,8 @@
             android:exported="true">
         </activity>
         <activity
-            android:name=".framework.LoadActivity" android:theme="@style/SpashLogo"
+            android:name=".framework.LoadActivity"
+            android:theme="@style/SpashLogo"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
