--- a/PSP_Oscar/Ejercicios/RestConTokens/RestConTokens_IgnacioLlorente/pom.xml
+++ b/PSP_Oscar/Ejercicios/RestConTokens/RestConTokens_IgnacioLlorente/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>RestConTokens_IgnacioLlorente</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>RestConTokens</artifactId>
+    <version>IgnacioLlorente</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
