--- a/PSP_Oscar/Ejercicios/RestConTokens/RestConTokens_IgnacioLlorente/pom.xml
+++ b/PSP_Oscar/Ejercicios/RestConTokens/RestConTokens_IgnacioLlorente/pom.xml
@@ -76,5 +76,10 @@
             <artifactId>argon2-jvm</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
     </dependencies>
 </project>
