--- a/PSP_Oscar/susApuntes/multimoduloRest/cliente/pom.xml
+++ b/PSP_Oscar/susApuntes/multimoduloRest/cliente/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>jakarta.el</artifactId>
             <version>4.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+        </dependency>
 
     </dependencies>
 </project>
