--- a/Moviles_Oscar/misapps/examen/app/src/main/AndroidManifest.xml
+++ b/Moviles_Oscar/misapps/examen/app/src/main/AndroidManifest.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Examen"
-        tools:targetApi="31">
+        android:theme="@style/Theme.NachoRestaurante"
+        tools:targetApi="31"
+        android:label="Nacho Examen"
+        android:icon="@drawable/logofinal"
+        android:roundIcon="@drawable/logofinal"
+        android:name="nacho.llorente.framework.ExamenApp"
+        >
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".framework.pantallamain.MainActivity"
+            android:exported="true"
+            android:permission="android.permission.INTERNET">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".framework.pantalladetallada.DetailedActivity"
+            android:exported="true"
+            android:permission="android.permission.INTERNET">
         </activity>
     </application>
 
