--- a/Data_Access_Lucia/Hospital_Project/Ejercicio2/IgnacioLlorente_TextFiles/pom.xml
+++ b/Data_Access_Lucia/Hospital_Project/Ejercicio2/IgnacioLlorente_TextFiles/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Unit1TextFiles</artifactId>
+    <artifactId>Unit2XMLFiles</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
