--- a/Data_Access_Lucia/Restaurant_Project/Part4/project/pom.xml
+++ b/Data_Access_Lucia/Restaurant_Project/Part4/project/pom.xml
@@ -15,7 +15,8 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+
+        <!-- Eithers -->
         <dependency>
             <groupId>io.vavr</groupId>
             <artifactId>vavr</artifactId>
