--- a/1_Data_Access_2/3_TextFiles/Parte2_Textfiles/Server/src/main/resources/application.properties
+++ b/1_Data_Access_2/3_TextFiles/Parte2_Textfiles/Server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.application.name=demo
-server.port=5500
+spring.application.name=demos
+spring.profiles.active=txt
+server.port=8080
 logging.level.org.springframework.web=DEBUG
