--- a/1_Data_Access_2/4_XmlFiles/XmlFiles/Server/pom.xml
+++ b/1_Data_Access_2/4_XmlFiles/XmlFiles/Server/pom.xml
@@ -30,21 +30,28 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!-- JAKARTA XML BIND API -->
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <!-- JAXB -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <!-- Spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -52,17 +59,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.hospitalcrud</groupId>
-            <artifactId>demo</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <!-- Dependencia para aplicaciones web de Spring Boot -->
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
 
+        <!-- LOMBOK -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- WELD DEPENDENCY INJECTION -->
         <dependency>
@@ -70,6 +78,7 @@
             <artifactId>weld-se-core</artifactId>
             <version>5.1.2.Final</version>
         </dependency>
+
     </dependencies>
 
     <build>
