--- a/1_Data_Access_2/4_XmlFiles/XmlFiles/Server/src/main/resources/application.properties
+++ b/1_Data_Access_2/4_XmlFiles/XmlFiles/Server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=demos
-spring.profiles.active=txt
+spring.profiles.active=xml
 server.port=8080
 logging.level.org.springframework.web=DEBUG
