--- a/1_Data_Access_2/5_JDBC/Server/pom.xml
+++ b/1_Data_Access_2/5_JDBC/Server/pom.xml
@@ -27,9 +27,10 @@
         <url/>
     </scm>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
+
         <!-- JAKARTA XML BIND API -->
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
@@ -78,6 +79,28 @@
             <artifactId>weld-se-core</artifactId>
             <version>5.1.2.Final</version>
         </dependency>
+
+        <!-- Hikari -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
+        <!-- JDBC -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>6.1.4</version>
+        </dependency>
+
+        <!-- MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
 
     </dependencies>
 
