--- a/1_Data_Access_2/6_Spring/Server/pom.xml
+++ b/1_Data_Access_2/6_Spring/Server/pom.xml
@@ -80,7 +80,7 @@
             <version>8.0.33</version>
         </dependency>
 
-        <!-- Spring -->
+        <!-- spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
