--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Windows\System32\SHELL32.dll,266
+IconResource=C:\Windows\system32\imageres.dll,9
 [ViewState]
 Mode=
 Vid=
