--- a/1_Data_Access_2/5_JDBC/Server/src/main/resources/application.properties
+++ b/1_Data_Access_2/5_JDBC/Server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demos
-spring.profiles.active=jdbc
+spring.profiles.active=spring
 server.port=8080
 logging.level.org.springframework.web=DEBUG
 
