--- a/1_Data_Access_2/5_JDBC/Server/pom.xml
+++ b/1_Data_Access_2/5_JDBC/Server/pom.xml
@@ -7,37 +7,13 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.4</version>
         <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.hospitalcrud</groupId>
-    <artifactId>demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
-    <description>demo</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+    </parent><groupId>com.hospitalcrud</groupId><version>0.0.1-SNAPSHOT</version><name>demo</name><artifactId>demo</artifactId><description>demo</description>
+
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
-
-        <!-- JAKARTA XML BIND API -->
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>4.0.0</version>
-        </dependency>
-
         <!-- JAXB -->
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
@@ -66,13 +42,6 @@
             <version>5.0.0</version>
         </dependency>
 
-        <!-- JDBC -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>6.1.4</version>
-        </dependency>
-
         <!-- MySQL -->
         <dependency>
             <groupId>mysql</groupId>
@@ -80,7 +49,7 @@
             <version>8.0.33</version>
         </dependency>
 
-        <!-- spring -->
+        <!-- SPRING -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
