--- a/1_Data_Access_2/7_Hibernate/Parte1_Gets/pom.xml
+++ b/1_Data_Access_2/7_Hibernate/Parte1_Gets/pom.xml
@@ -80,6 +80,16 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
         <!-- spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
