--- a/1_Data_Access_2/7_Hibernate/Parte2_Final/src/main/resources/application.properties
+++ b/1_Data_Access_2/7_Hibernate/Parte2_Final/src/main/resources/application.properties
@@ -3,11 +3,20 @@ spring.profiles.active=hibernate
 server.port=8080
 logging.level.org.springframework.web=DEBUG
 
-spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/ignaciollorente_hospital
+# spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/ignaciollorente_hospital
+# spring.datasource.username=root
+# spring.datasource.password=quevedo2dam
+
+
+
+spring.datasource.url=jdbc:mysql://192.168.1.143:3306/hospital
 spring.datasource.username=root
-spring.datasource.password=quevedo2dam
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
