--- a/1_Data_Access_2/7_Hibernate/Parte3_ConSpring/hibernate/pom.xml
+++ b/1_Data_Access_2/7_Hibernate/Parte3_ConSpring/hibernate/pom.xml
@@ -8,7 +8,7 @@
         <version>3.4.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ignacio.llorente</groupId>
+    <groupId>org.example</groupId>
     <artifactId>nachoHibernateConSpring</artifactId>
     <version>21-1-base</version>
     <name>nachoHibernateConSpring</name>
