--- a/1_Data_Access_2/7_Hibernate/Parte3_ConSpring/hibernate/src/main/resources/application.properties
+++ b/1_Data_Access_2/7_Hibernate/Parte3_ConSpring/hibernate/src/main/resources/application.properties
@@ -2,21 +2,15 @@ spring.application.name=hibernate-medCenter-CRUD
 spring.profiles.active=hibernate
 server.port=8080
 logging.level.org.springframework.web=DEBUG
-
-# spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/ignaciollorente_hospital
-# spring.datasource.username=root
-# spring.datasource.password=quevedo2dam
-
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hospital
+spring.datasource.url=jdbc:mysql://192.168.1.130:3306/hospital
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
