--- a/1_Data_Access_2/7_Hibernate/Parte4_FuncionalidadLogin/hibernate/pom.xml
+++ b/1_Data_Access_2/7_Hibernate/Parte4_FuncionalidadLogin/hibernate/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- Dependencia de Gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
