15/02 v1 el lio de montepio

--- a/1_Data_Access_2/7_Hibernate/Parte2_Final/src/main/resources/application.properties
+++ b/1_Data_Access_2/7_Hibernate/Parte2_Final/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demos
-spring.profiles.active=hibernate
+spring.profiles.active=mongodb
 server.port=8080
 logging.level.org.springframework.web=DEBUG
 
