--- a/1_Data_Access_2/8_Mongo/Part1_CredentialAndPatient/plantilla/Parte_final/src/main/resources/application.properties
+++ b/1_Data_Access_2/8_Mongo/Part1_CredentialAndPatient/plantilla/Parte_final/src/main/resources/application.properties
@@ -1,20 +1,10 @@
 spring.application.name=demos
-spring.profiles.active=hibernate
+spring.profiles.active=mongodb
 server.port=8080
 logging.level.org.springframework.web=DEBUG
 
-# spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/ignaciollorente_hospital
-# spring.datasource.username=root
-# spring.datasource.password=quevedo2dam
+# Configuración de MongoDB
+spring.data.mongodb.uri=mongodb://informatica.iesquevedo.es:2323/IgnacioLlorente_hospital
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 logging.level.org.hibernate=DEBUG
-
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hospital
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
