--- a/1_Data_Access_2/8_Mongo/Part1_CredentialAndPatient/plantilla/Parte_final/pom.xml
+++ b/1_Data_Access_2/8_Mongo/Part1_CredentialAndPatient/plantilla/Parte_final/pom.xml
@@ -38,6 +38,16 @@
             <version>4.0.0</version>
         </dependency>
 
+
+        <!-- GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
+
         <!-- JAXB -->
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
@@ -57,6 +67,13 @@
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
             <version>5.1.2.Final</version>
+        </dependency>
+
+        <!-- Mongo -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.12</version>
         </dependency>
 
         <!-- Hikari -->
