--- a/1_Data_Access_2/0_Examenes/01_Examen2Evaluacion/Examen/ExamenEntregado/ExamenModelo/pom.xml
+++ b/1_Data_Access_2/0_Examenes/01_Examen2Evaluacion/Examen/ExamenEntregado/ExamenModelo/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.3.4</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>com</groupId>
     <artifactId>ExamenModelo</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -16,16 +23,19 @@
 
 
     <dependencies>
+
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
             <version>3.0.3</version>
         </dependency>
+
         <dependency>
             <groupId>jakarta.json.bind</groupId>
             <artifactId>jakarta.json.bind-api</artifactId>
