shh dont check this

--- a/Moviles_Oscar/extraordinaria_moviles/examenExtraordinariaNacho/reymortiz_ejercicio1/src/main/resources/application.properties
+++ b/Moviles_Oscar/extraordinaria_moviles/examenExtraordinariaNacho/reymortiz_ejercicio1/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.open-in-view=false
 spring.graphql.graphiql.enabled=true
 spring.graphql.path=/graphql
 # Database
-spring.datasource.url=jdbc:mysql://informatica.iesquevedo.es:3335/reymortiz_examenPSP
+spring.datasource.url=jdbc:mysql://informatica.wompwomp.com:3335/reymortiz_examenPSP
 spring.datasource.username=root
 spring.datasource.password=quevedo2dam
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
