--- a/Moviles_Oscar/extraordinaria_moviles/examenExtraordinariaNacho/reyortiz_ejercicio3/src/main/resources/application.properties
+++ b/Moviles_Oscar/extraordinaria_moviles/examenExtraordinariaNacho/reyortiz_ejercicio3/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 # Database
-spring.datasource.url=jdbc:mysql://informatica.iesquevedo.es:3335/reymortiz_examenPSP
+spring.datasource.url=jdbc:mysql://informatica.wompwomp.com:3335/reymortiz_examenPSP
 spring.datasource.username=root
 spring.datasource.password=quevedo2dam
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
