--- a/1_Data_Access_2/7_Hibernate/Parte1_Gets/src/main/resources/application.properties
+++ b/1_Data_Access_2/7_Hibernate/Parte1_Gets/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=hibernate
 server.port=8080
 logging.level.org.springframework.web=DEBUG
 
-spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/ignaciollorente_hospital
+spring.datasource.url=jdbc:mysql://dam2.mysql.wompwomp.com:3335/ignaciollorente_hospital
 spring.datasource.username=root
 spring.datasource.password=quevedo2dam
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
