--- a/1_Data_Access_2/8_Mongo/Part1_CredentialAndPatient/plantilla/Parte_final/src/main/resources/application.properties
+++ b/1_Data_Access_2/8_Mongo/Part1_CredentialAndPatient/plantilla/Parte_final/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 logging.level.org.springframework.web=DEBUG
 
 # Configuración de MongoDB
-spring.data.mongodb.uri=mongodb://informatica.iesquevedo.es:2323/IgnacioLlorente_hospital
+spring.data.mongodb.uri=mongodb://informatica.wompwomp.com:2323/IgnacioLlorente_hospital
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 logging.level.org.hibernate=DEBUG
