--- a/PSP_Oscar/ExamenFinal/GraphQL/Ejercicio1ExamenPSP/src/main/resources/application.properties
+++ b/PSP_Oscar/ExamenFinal/GraphQL/Ejercicio1ExamenPSP/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.root = INFO
 logging.level.org.hibernate.SQL=DEBUG
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/samuelsanchez_examen_psp
+spring.datasource.url=jdbc:mysql://dam2.mysql.wompwomp.com:3335/samuelsanchez_examen_psp
 spring.datasource.username=root
 spring.datasource.password=quevedo2dam
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
