--- a/PSP_Oscar/ExamenFinal/Spring/Ejercicio3Nacho/src/main/resources/application.properties
+++ b/PSP_Oscar/ExamenFinal/Spring/Ejercicio3Nacho/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.root = INFO
 logging.level.org.hibernate.SQL=DEBUG
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://dam2.mysql.iesquevedo.es:3335/IgnacioLlorente_FinalPSP?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://dam2.mysql.wompwomp.com:3335/IgnacioLlorente_FinalPSP?useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/IgnacioLlorente_FinalPSP?useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=quevedo2dam
