--- a/PSP_Oscar/susApuntes/spring-rest-maven-java/src/main/resources/application.properties
+++ b/PSP_Oscar/susApuntes/spring-rest-maven-java/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://informatica.iesquevedo.es:3333/oscar
+spring.datasource.url=jdbc:mysql://informatica.wompwomp.com:3333/oscar
 spring.datasource.username=root
 spring.datasource.password=1asir
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
